hard-gists/586892/run.log
=== Docker Run Log for 586892 ===
Started at: Mi 29. Okt 16:07:44 CET 2025

[2025-10-29 16:07:44] START: Running container for 586892
[2025-10-29 16:07:45] SUCCESS: Container 41b0b4ec321e3810ff66f9bd8eddb49215214c42546efae4bae5976715544057 started for 586892
=== Container logs for 586892 ===
  File "/snippet.py", line 18
    except WindowsError, err:
           ^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 586892 ===
[2025-10-29 16:07:47] INFO: Container 41b0b4ec321e3810ff66f9bd8eddb49215214c42546efae4bae5976715544057 has stopped
